Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-16788

QPainterPath::pointAtPercent(t) returns wrong values when the path is empty

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 4.8.0
    • 4.7.1
    • GUI: Painting
    • None
    • 7fd7454805ea091688339111e544cb70f7a24739

      For example, the following code returns QPoint(0, 0) for the start and the end point, but it really should return QPoint(100, 100).

      #include <QPainterPath>
      #include <QDebug>
      
      int main()
      {
          QPainterPath path;
          path.moveTo(100, 100);
          path.cubicTo(100, 100, 100, 100, 100, 100);
          qDebug() << path.pointAtPercent(0) << path.pointAtPercent(1);
      }
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            rodal Samuel Rødal
            raggi Roberto Raggi
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes