Fixed QPainterPath::pointAtPercent(t) for one-element paths.

Return the MoveTo element instead of QPointF(0, 0).

Task-number: QTBUG-16788
Reviewed-by: Eskil Abrahamsen Blomfeldt